model annotation/db seed

--- a/test/fixtures/mc_questions.yml
+++ b/test/fixtures/mc_questions.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: mc_questions
+#
+#  id           :bigint           not null, primary key
+#  answer       :string
+#  distractor_1 :string
+#  distractor_2 :string
+#  question     :string
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
